Show site image in water temperature dashboard

--- a/bims/templates/water_temperature_single_site.html
+++ b/bims/templates/water_temperature_single_site.html
@@ -222,6 +222,12 @@
 
                 </div>
                 <div class="col-md-6 mp">
+
+                    <div class="chart-container">
+                        {% include 'site_image/site_image_carousel.html' with site_image=site_image %}
+                    </div>
+                    <div class="vertical-space"></div>
+
                     <div class="chart-container">
                         <div class="chart-title">Water Temperature
                         </div>
