Update monthly magnitude style

--- a/bims/templates/water_temperature_single_site.html
+++ b/bims/templates/water_temperature_single_site.html
@@ -66,7 +66,8 @@
         }
         .row-indicator {
             padding-top: 1em;
-            padding-left: 1em;
+            margin-left: 0.1em;
+            padding-left: 0;
         }
         .row-indicator .col-lg-3, .row-indicator .col-lg-4, .row-indicator .col-lg-2 {
             padding-left: 0;
@@ -76,6 +77,23 @@
         .row-indicator p {
             border-bottom: 1px solid rgba(138, 138, 138, 0.31);
             height: 20px;
+        }
+
+        .col-header {
+            margin-bottom: 1em;
+            background-color: #bebebe;
+            padding-top: 15px;
+            padding-bottom: 15px;
+            font-size: 11pt;
+            border: 0;
+        }
+
+        .col-header:first-child {
+            padding-left: 10px;
+        }
+
+        .row-indicator .col-lg-4 p {
+            padding-left: 10px;
         }
 
     </style>
